# mxm-secrets

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
mxm_secrets/: __init__.py  __main__.py  api.py
mxm_secrets/backends/: env_backend.py  gopass_backend.py
src/mxm/secrets/: __init__.py  __main__.py  api.py  validators.py
src/mxm/secrets/authorization/: __init__.py  policy_evaluation.py
src/mxm/secrets/backends/: __init__.py  env_backend.py  gopass_backend.py
src/mxm/secrets/config_data/: __init__.py  require.py  secret_ref.py  secret_store.py
src/mxm/secrets/models/: __init__.py  principal.py  resolved_secret_location.py  secret_policy.py  secret_ref.py  secret_store.py
src/mxm/secrets/registries/: __init__.py  secret_policy_registry.py  secret_ref_registry.py  secret_store_registry.py
src/mxm/secrets/resolution/: __init__.py  principal_resolution.py  secret_location_resolver.py  secret_retriever.py
tests/: test_api.py  test_cli.py  test_validators.py
tests/authorization/: test_policy_evaluation.py
tests/backends/: test_env_backend.py  test_gopass_backend.py
tests/config_data/: test_require.py  test_secret_policy.py  test_secret_ref.py  test_secret_store.py
tests/models/: test_principal.py  test_resolved_secret_location.py  test_secret_policy.py  test_secret_ref.py  test_secret_store.py
tests/registries/: test_secret_policy_registry.py  test_secret_ref_registry.py  test_secret_store_registry.py
tests/resolution/: test_principal_resolution.py  test_secret_location_resolution.py  test_secret_retriever.py
