[project]
name = "mxm-secrets"
version = "0.1.0"
description = "Secrets interface for Money Ex Machina"
authors = [
    {name = "mxm",email = "contact@moneyexmachina.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]

[tool.poetry.scripts]
mxm-secrets = "mxm_secrets.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
