[tool.poetry]
name = "mxm-secrets"
version = "0.3.1"
description = "Minimal secrets interface for Money Ex Machina, supporting gopass and env backends"
authors = ["mxm <contact@moneyexmachina.com>"]
license = "MIT"
readme = "README.md"
keywords = ["secrets", "gopass", "environment", "cli", "mxm"]
homepage = "https://moneyexmachina.com"
repository = "https://github.com/moneyexmachina/mxm-secrets"
documentation = "https://moneyexmachina.com/docs/mxm-secrets"
packages = [{ include = "mxm", from = "src" }]
include = ["src/mxm/secrets/py.typed"]


[tool.poetry.dependencies]
python = ">=3.13, <3.15"
click = "^8.2.1"
mxm-types = ">=0.3.0, <0.4.0"

[tool.poetry.scripts]
mxm-secrets = "mxm_secrets.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.14.3"
black = "^25.9.0"
isort = "^7.0.0"
pyright = "^1.1.407"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# ---- Tooling (package-local, MXM defaults) ----
[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["mxm"]
combine_as_imports = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E","F","I","B","UP","C90","RUF"]
ignore = ["E203","E501"]

[tool.ruff.lint.isort]
known-first-party = ["mxm"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
